建立ADO.NET文件夹

--- a/ShacoTricks/ShacoTricks.csproj
+++ b/ShacoTricks/ShacoTricks.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="DataBase\Sqlite\DataMerge.cs" />
+    <Compile Include="DataBase\Sqlite\Ado.Net\DataMerge.cs" />
     <Compile Include="DataBase\Sqlite\SqliteTricks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
